feat: aumento de cobertura dos testes